fixed padding forul header logout was cut off in chrome browser

--- a/css/general.css
+++ b/css/general.css
@@ -47,7 +47,6 @@ nav ul{
 	margin:0 auto;
 	padding:0;
 	list-style-type: none;
-	
 }	
 nav li{
 	color:#FFF;
@@ -172,7 +171,7 @@ button{
 	padding:0;
 	width:100%;
 /*	width:25em/*50%;*/
-	/*height:17em46%*/;
+	/*height:17em46%;*/
 }
 fieldset{
 	width:20em;
@@ -245,7 +244,7 @@ nav ul{
 	
 }	
 nav li{
-	padding: 0.2em 3.2em 0.2em 3.2em;
+	padding: 0.2em 3.2em 0.2em 2.2em;
 	color:#FFF;
 	display: inline;
 }
@@ -303,6 +302,7 @@ h1{
 	width:25em;
 	height:17em;
 }
+
 .login-info{
 	margin-top:1em;
 	margin-left:2em;
